src/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grpc-server-deployment
  name: grpc-server-deployment
  namespace: grpc
spec:
  selector:
    matchLabels:
      app: grpc-server-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-server-deployment
    spec:
      containers:
        - image: saltoleto/grpc-server:2
          name: grpc-server-deployment
          ports:
            - containerPort: 9090
              name: http
      restartPolicy: Always
