src/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-server-cluster-ip
  name: grpc-server-cluster-ip
  namespace: grpc
spec:
  ports:
    - name: grpc
      port: 8080
      protocol: TCP
      targetPort: 9090
  selector:
    app: grpc-server-deployment
